--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
 </head>
 
 <body>
+ <div class="alert alert-warning fade in" style="border-radius: 0px !important;">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong><span class="glyphicon glyphicon-warning-sign"></span></strong> This site will go under maintenance on 29th Oct.
+  </div>
   <div class="box">
     <div class="text">
       <img src="img/logo.svg" alt="" height="300px" width="600px">
